--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,26 +22,28 @@ jobs:
           node-version: 22
           cache: "pnpm"
 
-      # 3️⃣ Install pnpm globally
-      - name: Install pnpm globally
-        run: npm install -g pnpm@latest
+      # 3️⃣ Enable Corepack and prepare pnpm
+      - name: Enable pnpm
+        run: |
+          corepack enable
+          corepack prepare pnpm@latest --activate
 
-      # 4️⃣ Install dependencies in the workspace
+      # 4️⃣ Install dependencies
       - name: Install dependencies (workspace)
         run: pnpm install
 
       # 5️⃣ Lint backend
-      - name: Lint Backend (new_folder)
+      - name: Lint Backend
         run: pnpm --filter new_folder lint
 
       # 6️⃣ Lint frontend
-      - name: Lint Frontend (frotend)
+      - name: Lint Frontend
         run: pnpm --filter frotend lint
 
       # 7️⃣ Test backend
-      - name: Test Backend (new_folder)
+      - name: Test Backend
         run: pnpm --filter new_folder test -- --runInBand
 
       # 8️⃣ Test frontend
-      - name: Test Frontend (frotend)
+      - name: Test Frontend
         run: pnpm --filter frotend test -- --watchAll=false
