--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,20 +14,43 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # -------- FRONTEND (frotend folder) --------
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'pnpm'
+
+      # -------- FRONTEND --------
       - name: Install Frontend Dependencies
         working-directory: ./frotend
-        run: npm install
+        run: pnpm install --frozen-lockfile
+
+      - name: Run Frontend Linting
+        working-directory: ./frotend
+        run: pnpm run lint
+
+      - name: Run Frontend Tests
+        working-directory: ./frotend
+        run: pnpm test -- --watchAll=false --passWithNoTests
 
       - name: Build Frontend
         working-directory: ./frotend
-        run: npm run build
+        run: pnpm run build
 
-      # -------- BACKEND (new_folder - assuming this is your backend) --------
+      # -------- BACKEND --------
       - name: Install Backend Dependencies
         working-directory: ./new_folder
-        run: npm install
+        run: pnpm install --frozen-lockfile
+
+      - name: Run Backend Linting
+        working-directory: ./new_folder
+        run: pnpm run lint
 
       - name: Run Backend Tests
         working-directory: ./new_folder
-        run: npm test
+        run: pnpm test
