--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,53 +2,57 @@ name: MERN CI Pipeline
 
 on:
   push:
-    branches: ["main", "feature"]
+    branches: ["main"]
   pull_request:
-    branches: ["main", "feature"]
+    branches: ["main"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
 
     steps:
-      # 1️⃣ Checkout repository
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2️⃣ Setup Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 22
-
-      # 3️⃣ Setup pnpm
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 10
+          version: 8
 
-      # 4️⃣ Verify pnpm
-      - name: Verify pnpm
-        run: pnpm -v
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'pnpm'
 
-      # ----------------- FRONTEND -----------------
-      - name: Install Frontend Dependencies
+      # Configure pnpm to match your local setup
+      - name: Configure pnpm
+        run: |
+          pnpm config set virtual-store-dir node_modules/.pnpm
+          pnpm config set virtual-store-dir-max-length 120
+
+      # Install using workspace
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      # -------- FRONTEND --------
+      - name: Run Frontend Linting
         working-directory: ./frotend
-        run: pnpm install
+        run: pnpm run lint
+
+      - name: Run Frontend Tests
+        working-directory: ./frotend
+        run: pnpm test -- --watchAll=false --passWithNoTests
 
       - name: Build Frontend
         working-directory: ./frotend
         run: pnpm run build
 
-      # ----------------- BACKEND -----------------
-      - name: Install Backend Dependencies
+      # -------- BACKEND --------
+      - name: Run Backend Linting
         working-directory: ./new_folder
-        run: pnpm install
+        run: pnpm run lint
 
-      - name: Run Backend (runtime check)
+      - name: Run Backend Tests
         working-directory: ./new_folder
-        run: |
-          echo "Testing backend startup..."
-          timeout 20s node index.js || echo "Server test completed"
-          echo "✅ Backend can start successfully"
+        run: pnpm test
