--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,4 @@
-virtual-store-dir=.pnpm-store
+# .npmrc
+virtual-store-dir=node_modules/.pnpm
+state-dir=node_modules/.pnpm-state
+virtual-store-dir-max-length=120
