--- a/frotend/package.json
+++ b/frotend/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "predeploy": "vite build"
   },
   "dependencies": {
     "react": "^19.2.0",
